--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.3",
+    "chartjs": "^0.3.24",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.3",
